feat: add support to alter table statements, and fix some bugs